--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "click>=8.1.0",
     "colorlog>=6.7.0",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [project.optional-dependencies]
